[gd_scene load_steps=3 format=2]

[ext_resource path="res://Prueba00/Escenas/singleton_parametros.gd" type="Script" id=1]
[ext_resource path="res://Prueba00/Images/desarrollo.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -0.499756
margin_top = 3.0
margin_right = 1079.5
margin_bottom = 723.0
texture = ExtResource( 2 )

[node name="Console1" type="Button" parent="TextureRect"]
margin_left = 100.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 200.0
text = "VegaSys"
flat = true

[node name="Console2" type="Button" parent="TextureRect"]
margin_left = 220.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 200.0
text = "DaxGenesys"
flat = true

[node name="Console3" type="Button" parent="TextureRect"]
margin_left = 340.0
margin_top = 100.0
margin_right = 440.0
margin_bottom = 200.0
text = "NinSystem"
flat = true

[node name="Console4" type="Button" parent="TextureRect"]
margin_left = 460.0
margin_top = 100.0
margin_right = 560.0
margin_bottom = 200.0
text = "Nova-X"
flat = true

[node name="Createbutton" type="Button" parent="TextureRect"]
visible = false
margin_left = 981.0
margin_top = 694.5
margin_right = 1063.0
margin_bottom = 714.5
text = "Desarrollar"

[connection signal="pressed" from="TextureRect/Console1" to="." method="_on_Console1_pressed"]
[connection signal="pressed" from="TextureRect/Console2" to="." method="_on_Console2_pressed"]
[connection signal="pressed" from="TextureRect/Console3" to="." method="_on_Console3_pressed"]
[connection signal="pressed" from="TextureRect/Console4" to="." method="_on_Console4_pressed"]
[connection signal="pressed" from="TextureRect/Createbutton" to="." method="_on_Createbutton_pressed"]
